<resources>
    <string name="app_name">Employee Absense</string>
    <string name="enter_to_employee_account">Enter to your account</string>
    <string name="enter_employee_no">Employee NO</string>
    <string name="enter_employee_password">Enter password</string>
    <string name="sign_in">Login</string>
    <string name="login">Login</string>
    <string name="employee_record_dialy">Record dialy record</string>
    <string name="Home">Home</string>
    <string name="about">About</string>
    <string name="attendance_registration">Attendance registration</string>
    <string name="record_attendance_absence">Record of attendance and absence</string>
    <string name="employee_location">Employee Location</string>
    <string name="employee_occupation">Employee Occupation</string>
    <string name="employee_birth_date">Employee Birth date</string>
    <string name="invalid_credentials">Invalid credentials or user not registered</string>
    <string name="institute_name">High institute of Misrata</string>
    <string name="the_high_institute_of_misrata_libya">The High institute of Misrata Libya</string>
    <string name="put_your_phone_on_qr_code">Put your phone on qr code</string>
    <string name="register_daily">Register daily</string>
    <string name="there_no_daily_records">There no daily records</string>
    <string name="cant_register_out_of_buildig">You can\'t register out of building</string>
    <string name="record_attendance">Record attendance</string>
    <string name="leave_registration">Leave registration</string>
    <string name="employee_number">Employee Number</string>
    <string name="employee_phone">Employee phone</string>
    <string name="employee_email">Employee Email</string>
    <string name="you_are_registered_in_system">You are successfully register in this day</string>
    <string name="logout">Logout</string>

    <!--
    ادخل كلمة المرور
    ادخل الرقم الوظيفي
    تسجيل الدخول
    الدخول لحساب الموظف
    -->
</resources>