<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">
    <ScrollView
        android:id="@+id/scrollview_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

<!--       todo add institute logo -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="-38dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="26sp"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="8sp"
            android:gravity="center_horizontal"
            android:text="@string/enter_to_employee_account"
            android:layout_marginBottom="8dp"
            android:textFontWeight="700"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <!-- todo fix stroke inaction and active mode for all inputs -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/employee_username_container"
                android:elevation="0dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="8"
                app:errorEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/employee_username"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:textColor="@android:color/black"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_employee_no"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="@dimen/text_size"
                    android:shadowDy="10" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/makani_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:elevation="0dp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/employee_password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_employee_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:shadowDy="10"
                    android:textColor="@android:color/black"

                    android:textSize="@dimen/text_size" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/employee_signin"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:elevation="10dp"
            />

    </LinearLayout>
    </ScrollView>

</FrameLayout>