<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.HomeFragment">

    <ScrollView
        android:id="@+id/scrollview_primary_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cardCornerRadius="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                card_view:strokeColor="@color/logo_color"
                app:strokeWidth="0.8dp">

                <ImageView
                    android:id="@+id/makani_profile_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_logo"
                    android:padding="8dp"
                    android:scaleType="fitCenter" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="0dp"
                android:layout_margin="8dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/employee_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="normal"
                        android:textSize="18sp"
                        android:lineSpacingExtra="8sp"
                        android:layout_centerHorizontal="true"
                        android:textColor="@android:color/black"
                        android:text="test data"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="0dp"
                android:layout_margin="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:paddingBottom="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="16sp"
                            android:lineSpacingExtra="8sp"
                            android:layout_alignParentStart="true"
                            android:text="@string/employee_number"
                            />
                        <TextView
                            android:id="@+id/employee_profile_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="16sp"
                            android:layout_alignParentEnd="true"
                            android:textAlignment="textEnd"
                            android:lineSpacingExtra="8sp"
                            android:layout_weight="1"
                            android:text="10002"
                            />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:paddingBottom="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="16sp"
                            android:lineSpacingExtra="8sp"
                            android:layout_alignParentStart="true"
                            android:layout_weight="1"
                            android:text="@string/employee_phone"
                            />
                        <TextView
                            android:id="@+id/employee_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="16sp"
                            android:layout_alignParentEnd="true"
                            android:lineSpacingExtra="8sp"
                            android:layout_weight="1"
                            android:text="0914031050"
                            />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/more_data"
                        android:weightSum="2"
                        android:paddingBottom="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="16sp"
                            android:lineSpacingExtra="8sp"
                            android:layout_alignParentStart="true"
                            android:text="@string/employee_email"
                            />
                        <TextView
                            android:id="@+id/employee_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="16sp"
                            android:textAlignment="textEnd"
                            android:lineSpacingExtra="8sp"
                            android:layout_alignParentEnd="true"
                            android:text="almaki@gmail.com"
                            />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/more_data"
                        android:weightSum="2"
                        android:paddingBottom="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="16sp"
                            android:lineSpacingExtra="8sp"
                            android:layout_alignParentStart="true"
                            android:text="@string/employee_location"
                            />
                        <TextView
                            android:id="@+id/employee_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="16sp"
                            android:textAlignment="textEnd"
                            android:lineSpacingExtra="8sp"
                            android:layout_alignParentEnd="true"

                            android:text="Misrata"
                            />
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:paddingBottom="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="16sp"
                            android:lineSpacingExtra="8sp"
                            android:layout_alignParentStart="true"
                            android:text="@string/employee_occupation"
                            />
                        <TextView
                            android:id="@+id/employee_occupation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="16sp"
                            android:textAlignment="textEnd"
                            android:lineSpacingExtra="8sp"
                            android:layout_alignParentEnd="true"
                            android:text="Manager"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:paddingBottom="10dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="16sp"
                            android:lineSpacingExtra="8sp"
                            android:layout_alignParentStart="true"
                            android:text="@string/employee_birth_date"
                            />
                        <TextView
                            android:id="@+id/employee_birth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="16sp"
                            android:textAlignment="textEnd"
                            android:lineSpacingExtra="8sp"
                            android:layout_alignParentEnd="true"
                            android:text="1994"
                            />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <RelativeLayout
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="250dp">
                <LinearLayout
                    android:id="@+id/employee_select_map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <fragment
                        android:name="com.almaki.employeeabsense.ui.MapsFragment"
                        android:layout_width="match_parent"

                        android:layout_height="250dp" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_baseline_how_to_reg_24"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:elevation="10dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>